He acabado de verdad, que no había puesto bien las tabulaciones al final del pliego...

--- a/pliego/cap-aspectos-juridicos.tex
+++ b/pliego/cap-aspectos-juridicos.tex
@@ -10,15 +10,10 @@ Las antedichas causas de fuerza mayor se tomarán en consideración únicamente cua
 
 Tanto el comprador como el contratista se comprometen a cumplir las condiciones establecidas en el presente Pliego de Condiciones y en la documentación complementaria del contrato, resolviendo por medio de acuerdos y negociaciones las posibles diferencias que puedan surgir entre ellos respecto a la aplicación, desarrollo, cumplimiento, ejecución o interpretación de los mismos.
 
-En caso de que cualquier posible discrepancia o controversia entre ellos no pudiese ser llevada a buen fin, resolviéndose con éxito en la forma anteriormente indicada, el contratista se compromete a someter tales diferencias a arbitraje, formalizado de acuerdo a las normas reguladoras del mismo, contenidas en la vigente Ley de Arbitraje de Derecho Privado.
+En caso de que cualquier posible discrepancia o controversia entre ellos no pudiese ser llevada a buen fin, resolviéndose con éxito en la forma anteriormente indicada, el contratista se compromete a someter tales diferencias a arbitraje, formalizado de acuerdo a las normas reguladoras del mismo, contenidas en la vigente Ley de Arbitraje de Derecho Privado. 
 
-El arbitraje se realizará en Bilbao y en la escritura ha de figurar el compromiso del plazo de 30 días como término en que los árbitros han de pronunciar el Laudo correspondiente.
-El procedimiento de arbitraje estará de acuerdo con la Legislación Española y será
-resuelto en derecho por tres árbitros, uno elegido por cada parte y el otro ya designado.
-Si las partes no llegaran a un acuerdo para designar el primer árbitro, éste será
-seleccionado por insaculación entre los tres árbitros de una lista que haya sido
-proporcionada por el Colegio de Abogados de Bilbao.
-Los árbitros procederán a liquidar los gastos del procedimiento arbitral, incluyendo sus
-honorarios, y a establecer a cuál de las partes tendrán que cargarse los gastos de
-enjuiciamiento.
-Las partes declaran desde ahora aceptar las decisiones del Colegio Arbitral.
+El arbitraje se realizará en Bilbao y en la escritura ha de figurar el compromiso del plazo de 30 días como término en que los árbitros han de pronunciar el Laudo correspondiente. 
+
+El procedimiento de arbitraje estará de acuerdo con la Legislación Española y será resuelto en derecho por tres árbitros, uno elegido por cada parte y el otro ya designado. Si las partes no llegaran a un acuerdo para designar el primer árbitro, éste será seleccionado por insaculación entre los tres árbitros de una lista que haya sido proporcionada por el Colegio de Abogados de Bilbao.
+
+Los árbitros procederán a liquidar los gastos del procedimiento arbitral, incluyendo sus honorarios, y a establecer a cuál de las partes tendrán que cargarse los gastos de enjuiciamiento. Las partes declaran desde ahora aceptar las decisiones del Colegio Arbitral.
