Corregido el fallo, margin es para todo

--- a/alto/cap-integracion.tex
+++ b/alto/cap-integracion.tex
@@ -1,7 +1,7 @@
 \chapter{Diseño de la integración}
 
-Este es un capítulo que tiene como objetivo explicar como se integran entre si las herramientas del proyecto, Ksensor con las modificaciones expuestas y los módulos de trazas y estadísticas. Para guiar la explicación, se puede referir a  \reference{fig:integracion-modular}{Figura de integración de los módulos}
-
+Este es un capítulo que tiene como objetivo explicar como se integran entre si las herramientas del proyecto, Ksensor con las modificaciones expuestas y los módulos de trazas y estadísticas. Para guiar la explicación, se aconseja se siga el diagrama \reference{fig:integracion-modular}{Figura de integración de los módulos}
+\\
 \begin{figure}[h]
 \centering
 \includegraphics[width=\linewidth]{Integracion}
