--- a/pliego/pliego.tex
+++ b/pliego/pliego.tex
@@ -46,7 +46,7 @@
 \setstretch{1.4}                %      1.4 del espacio normal
 \usepackage{parskip}            % El espaciado entre parrafos 
 \setlength{\parindent}{25pt}    %      lo ponemos a 25pt
-\usepackage[body=17cm,footskip=2cm,margin=3cm]{geometry} % Cambiar el margen del texto
+\usepackage[top=3cm,left=3cm,bottom=4cm,right=3cm]{geometry} % Cambiar el margen del texto
 
 \usepackage{fancyhdr}           % Cambiar las cabeceras del documento
 \pagestyle{fancy}               %      y usar los cambios
